spec/ccf/0.1.1/PACKAGE-INVENTORY.md
# CCF 0.1.1 package inventory

Generated from the validated reference package.

- Files before checksum manifest and inventory: **420**
- JSON Schemas: **107**
- Registry files: **12**
- Markdown documents: **36**

## Top-level counts

- `CCF-0.1.1-SPEC.md`: 1
- `CHANGELOG-0.1.1.md`: 1
- `Makefile`: 1
- `README.md`: 1
- `THOTH-IMPLEMENTATION-CHECKLIST.md`: 1
- `docs`: 23
- `examples`: 245
- `openapi`: 2
- `registries`: 13
- `schemas`: 109
- `semantic-catalog.json`: 1
- `sql`: 2
- `tools`: 8
- `vectors`: 12

## Files

- `CCF-0.1.1-SPEC.md`
- `CHANGELOG-0.1.1.md`
- `Makefile`
- `README.md`
- `THOTH-IMPLEMENTATION-CHECKLIST.md`
- `docs/00-status-conformance.md`
- `docs/01-object-model.md`
- `docs/02-identifiers-references.md`
- `docs/03-bodies-erasure.md`
- `docs/04-canonicalization-hashing.md`
- `docs/05-envelopes.md`
- `docs/06-admission-idempotency.md`
- `docs/07-integrity-chain.md`
- `docs/08-lineages-state-machines.md`
- `docs/09-governance.md`
- `docs/10-projections-postgres.md`
- `docs/11-import-export-evolution.md`
- `docs/12-security-trust.md`
- `docs/13-conformance.md`
- `docs/14-thoth-adoption.md`
- `docs/15-glossary.md`
- `docs/16-changelog.md`
- `docs/profiles/archive-encryption.md`
- `docs/profiles/core.md`
- `docs/profiles/local-sync.md`
- `docs/profiles/object-erasure.md`
- `docs/profiles/succession.md`
- `docs/profiles/witnessed-integrity.md`
- `examples/mindpack/README.md`
- `examples/mindpack/blob-data/1347aae2-aa68-44ff-bb95-fd864a648d0f.bin`
- `examples/mindpack/compartments/blobs/1347aae2-aa68-44ff-bb95-fd864a648d0f.semantic.json`
- `examples/mindpack/compartments/blobs/1347aae2-aa68-44ff-bb95-fd864a648d0f.structural.json`
- `examples/mindpack/compartments/links/280e2137-89fe-4da4-aa7f-2e132c0e51b6.semantic.json`
- `examples/mindpack/compartments/links/280e2137-89fe-4da4-aa7f-2e132c0e51b6.structural.json`
- `examples/mindpack/compartments/links/394dbb9d-d4d3-4796-b5fe-473c2004f761.semantic.json`
- `examples/mindpack/compartments/links/394dbb9d-d4d3-4796-b5fe-473c2004f761.structural.json`
- `examples/mindpack/compartments/links/39d32f3d-12e0-4c8a-8014-5325d3c835e3.semantic.json`
- `examples/mindpack/compartments/links/39d32f3d-12e0-4c8a-8014-5325d3c835e3.structural.json`
- `examples/mindpack/compartments/links/3b8624df-05b0-4bb0-9a4a-092a183f50a9.semantic.json`
- `examples/mindpack/compartments/links/3b8624df-05b0-4bb0-9a4a-092a183f50a9.structural.json`
- `examples/mindpack/compartments/links/a4357ced-f874-4ab8-97ad-6eb95171879d.semantic.json`
- `examples/mindpack/compartments/links/a4357ced-f874-4ab8-97ad-6eb95171879d.structural.json`
- `examples/mindpack/compartments/links/b6f86d6f-d5ae-42e1-9b45-1e196b3bc15a.semantic.json`
- `examples/mindpack/compartments/links/b6f86d6f-d5ae-42e1-9b45-1e196b3bc15a.structural.json`
- `examples/mindpack/compartments/links/b8eca641-3df7-4f0f-90c4-5ad0b1c4bed2.semantic.json`
- `examples/mindpack/compartments/links/b8eca641-3df7-4f0f-90c4-5ad0b1c4bed2.structural.json`
- `examples/mindpack/compartments/records/11ecb434-503d-475e-8d94-602398794896.semantic.json`
- `examples/mindpack/compartments/records/11ecb434-503d-475e-8d94-602398794896.structural.json`
- `examples/mindpack/compartments/records/15b2492f-59a8-4e6a-93a2-c3b4a134c345.semantic.json`
- `examples/mindpack/compartments/records/15b2492f-59a8-4e6a-93a2-c3b4a134c345.structural.json`
- `examples/mindpack/compartments/records/1914abf8-35f2-489c-baaa-5505a9983281.structural.json`
- `examples/mindpack/compartments/records/2fd2e84a-3d89-47b6-83c2-1be7729ff839.semantic.json`
- `examples/mindpack/compartments/records/2fd2e84a-3d89-47b6-83c2-1be7729ff839.structural.json`
- `examples/mindpack/compartments/records/6acc6514-2dab-4ba0-9851-89d51a83e1c1.semantic.json`
- `examples/mindpack/compartments/records/6acc6514-2dab-4ba0-9851-89d51a83e1c1.structural.json`
- `examples/mindpack/compartments/records/85441aca-60e4-4a94-bf4b-10e71046dbec.semantic.json`
- `examples/mindpack/compartments/records/85441aca-60e4-4a94-bf4b-10e71046dbec.structural.json`
- `examples/mindpack/compartments/records/86fb5ba3-070c-4557-b5f5-24688206ad80.semantic.json`
- `examples/mindpack/compartments/records/86fb5ba3-070c-4557-b5f5-24688206ad80.structural.json`
- `examples/mindpack/compartments/records/8a28d4f2-8e94-4ab1-a0b4-08d6c6f1cc81.semantic.json`
- `examples/mindpack/compartments/records/8a28d4f2-8e94-4ab1-a0b4-08d6c6f1cc81.structural.json`
- `examples/mindpack/compartments/records/a5e2e478-195c-4f2e-8329-a13a1e1fef7e.semantic.json`
- `examples/mindpack/compartments/records/a5e2e478-195c-4f2e-8329-a13a1e1fef7e.structural.json`
- `examples/mindpack/compartments/records/ad7690e6-b6d5-4933-9527-27d2c41b7187.structural.json`
- `examples/mindpack/compartments/records/b442886f-3495-40d5-b088-f46b5167cc28.structural.json`
- `examples/mindpack/compartments/records/d0d98ab3-0493-4491-bde9-ccfb70e6c82d.semantic.json`
- `examples/mindpack/compartments/records/d0d98ab3-0493-4491-bde9-ccfb70e6c82d.structural.json`
- `examples/mindpack/compartments/records/ec80197e-7b6d-4164-a82a-317f7ef748e8.semantic.json`
- `examples/mindpack/compartments/records/ec80197e-7b6d-4164-a82a-317f7ef748e8.structural.json`
- `examples/mindpack/compartments/records/ef73705f-4910-4bfa-ab60-cf08d8169b6d.semantic.json`
- `examples/mindpack/compartments/records/ef73705f-4910-4bfa-ab60-cf08d8169b6d.structural.json`
- `examples/mindpack/compartments/records/fa001749-4cb0-4117-a8b7-9dbc02a811cd.structural.json`
- `examples/mindpack/integrity/commits.ndjson`
- `examples/mindpack/integrity/members.ndjson`
- `examples/mindpack/manifest.json`
- `examples/mindpack/objects/blobs.ndjson`
- `examples/mindpack/objects/links.ndjson`
- `examples/mindpack/objects/records.ndjson`
- `examples/mindpack/producer-batches/2eac061a-ef5e-4d62-a674-c8fd2be09eb7.json`
- `examples/mindpack/registries/README.md`
- `examples/mindpack/registries/authority-bases.registry.json`
- `examples/mindpack/registries/blobs.registry.json`
- `examples/mindpack/registries/data-classes.registry.json`
- `examples/mindpack/registries/hash-profiles.registry.json`
- `examples/mindpack/registries/links.registry.json`
- `examples/mindpack/registries/policy-evaluators.registry.json`
- `examples/mindpack/registries/predicates.registry.json`
- `examples/mindpack/registries/profiles.registry.json`
- `examples/mindpack/registries/retention-profiles.registry.json`
- `examples/mindpack/registries/signature-profiles.registry.json`
- `examples/mindpack/registries/state-machines.registry.json`
- `examples/mindpack/registries/types.registry.json`
- `examples/mindpack/schemas/README.md`
- `examples/mindpack/schemas/catalog.json`
- `examples/mindpack/schemas/common/compartment-envelope.schema.json`
- `examples/mindpack/schemas/common/defs.schema.json`
- `examples/mindpack/schemas/governance/authorization-decision.schema.json`
- `examples/mindpack/schemas/governance/decision-context.schema.json`
- `examples/mindpack/schemas/objects/blob-header.schema.json`
- `examples/mindpack/schemas/objects/blob-semantic-content.schema.json`
- `examples/mindpack/schemas/objects/blob-semantic.schema.json`
- `examples/mindpack/schemas/objects/blob-structural-content.schema.json`
- `examples/mindpack/schemas/objects/blob-structural.schema.json`
- `examples/mindpack/schemas/objects/commit-member.schema.json`
- `examples/mindpack/schemas/objects/link-header.schema.json`
- `examples/mindpack/schemas/objects/link-semantic-content.schema.json`
- `examples/mindpack/schemas/objects/link-semantic.schema.json`
- `examples/mindpack/schemas/objects/link-structural-content.schema.json`
- `examples/mindpack/schemas/objects/link-structural.schema.json`
- `examples/mindpack/schemas/objects/mindpack-manifest.schema.json`
- `examples/mindpack/schemas/objects/record-header.schema.json`
- `examples/mindpack/schemas/objects/record-semantic-content.schema.json`
- `examples/mindpack/schemas/objects/record-semantic.schema.json`
- `examples/mindpack/schemas/objects/record-structural-content.schema.json`
- `examples/mindpack/schemas/objects/record-structural.schema.json`
- `examples/mindpack/schemas/objects/structural/core-device-credential.schema.json`
- `examples/mindpack/schemas/objects/structural/empty.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-catalog-transition.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-commit.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-head-witness.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-signer-rotation.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-successor-activation.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-successor-authorization-revocation.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-successor-authorization.schema.json`
- `examples/mindpack/schemas/objects/structural/lineage-erasure-receipt.schema.json`
- `examples/mindpack/schemas/objects/structural/lineage-link-disposition.schema.json`
- `examples/mindpack/schemas/operational/admission.schema.json`
- `examples/mindpack/schemas/operational/batch-result.schema.json`
- `examples/mindpack/schemas/operational/body-storage.schema.json`
- `examples/mindpack/schemas/operational/erasure-operation.schema.json`
- `examples/mindpack/schemas/operational/lineage-head.schema.json`
- `examples/mindpack/schemas/operational/policy-pending.schema.json`
- `examples/mindpack/schemas/operational/projection-checkpoint.schema.json`
- `examples/mindpack/schemas/payloads/agent/finding.schema.json`
- `examples/mindpack/schemas/payloads/agent/handoff.schema.json`
- `examples/mindpack/schemas/payloads/agent/proposal.schema.json`
- `examples/mindpack/schemas/payloads/agent/receipt.schema.json`
- `examples/mindpack/schemas/payloads/agent/run.schema.json`
- `examples/mindpack/schemas/payloads/continuity/boundary.schema.json`
- `examples/mindpack/schemas/payloads/continuity/commitment.schema.json`
- `examples/mindpack/schemas/payloads/continuity/episode.schema.json`
- `examples/mindpack/schemas/payloads/continuity/goal.schema.json`
- `examples/mindpack/schemas/payloads/continuity/preference.schema.json`
- `examples/mindpack/schemas/payloads/continuity/relationship.schema.json`
- `examples/mindpack/schemas/payloads/continuity/value.schema.json`
- `examples/mindpack/schemas/payloads/core/empty.schema.json`
- `examples/mindpack/schemas/payloads/core/person.schema.json`
- `examples/mindpack/schemas/payloads/core/runtime.schema.json`
- `examples/mindpack/schemas/payloads/core/session.schema.json`
- `examples/mindpack/schemas/payloads/core/source.schema.json`
- `examples/mindpack/schemas/payloads/experience/artifact.schema.json`
- `examples/mindpack/schemas/payloads/experience/event.schema.json`
- `examples/mindpack/schemas/payloads/experience/observation.schema.json`
- `examples/mindpack/schemas/payloads/experience/utterance.schema.json`
- `examples/mindpack/schemas/payloads/governance/consent.schema.json`
- `examples/mindpack/schemas/payloads/governance/erasure_decision.schema.json`
- `examples/mindpack/schemas/payloads/governance/erasure_request.schema.json`
- `examples/mindpack/schemas/payloads/governance/grant.schema.json`
- `examples/mindpack/schemas/payloads/governance/legal_basis.schema.json`
- `examples/mindpack/schemas/payloads/governance/legal_hold.schema.json`
- `examples/mindpack/schemas/payloads/governance/objection.schema.json`
- `examples/mindpack/schemas/payloads/governance/policy.schema.json`
- `examples/mindpack/schemas/payloads/governance/restriction.schema.json`
- `examples/mindpack/schemas/payloads/governance/retention_trigger.schema.json`
- `examples/mindpack/schemas/payloads/governance/review_decision.schema.json`
- `examples/mindpack/schemas/payloads/governance/subject_access_request.schema.json`
- `examples/mindpack/schemas/payloads/integrity/catalog_transition.schema.json`
- `examples/mindpack/schemas/payloads/integrity/commit.schema.json`
- `examples/mindpack/schemas/payloads/integrity/head_witness.schema.json`
- `examples/mindpack/schemas/payloads/integrity/signer_rotation.schema.json`
- `examples/mindpack/schemas/payloads/integrity/successor_activation.schema.json`
- `examples/mindpack/schemas/payloads/integrity/successor_authorization.schema.json`
- `examples/mindpack/schemas/payloads/integrity/successor_authorization_revocation.schema.json`
- `examples/mindpack/schemas/payloads/lineage/erasure_receipt.schema.json`
- `examples/mindpack/schemas/payloads/lineage/link_disposition.schema.json`
- `examples/mindpack/schemas/payloads/process/run.schema.json`
- `examples/mindpack/schemas/payloads/security/finding.schema.json`
- `examples/mindpack/schemas/payloads/security/keyset_manifest.schema.json`
- `examples/mindpack/schemas/payloads/semantic/assertion.schema.json`
- `examples/mindpack/schemas/payloads/semantic/concept.schema.json`
- `examples/mindpack/schemas/payloads/semantic/entity.schema.json`
- `examples/mindpack/schemas/payloads/semantic/entity_resolution.schema.json`
- `examples/mindpack/schemas/payloads/sync/producer_batch_receipt.schema.json`
- `examples/mindpack/schemas/payloads/work/constraint.schema.json`
- `examples/mindpack/schemas/payloads/work/decision.schema.json`
- `examples/mindpack/schemas/payloads/work/project.schema.json`
- `examples/mindpack/schemas/payloads/work/task.schema.json`
- `examples/mindpack/schemas/registries/blob-registry.schema.json`
- `examples/mindpack/schemas/registries/link-registry.schema.json`
- `examples/mindpack/schemas/registries/predicate-registry.schema.json`
- `examples/mindpack/schemas/registries/profile-registry.schema.json`
- `examples/mindpack/schemas/registries/state-machine-registry.schema.json`
- `examples/mindpack/schemas/registries/type-registry.schema.json`
- `examples/mindpack/schemas/security/device-credential.schema.json`
- `examples/mindpack/schemas/security/keyset-manifest.schema.json`
- `examples/mindpack/schemas/submissions/blob-submission.schema.json`
- `examples/mindpack/schemas/submissions/link-submission.schema.json`
- `examples/mindpack/schemas/submissions/record-submission.schema.json`
- `examples/mindpack/schemas/sync/delta-pack-manifest.schema.json`
- `examples/mindpack/schemas/sync/producer-batch.schema.json`
- `examples/mindpack/schemas/sync/sync-head.schema.json`
- `examples/mindpack/semantic-catalog.json`
- `examples/thoth-capture/README.md`
- `examples/thoth-capture/blob-1347aae2-aa68-44ff-bb95-fd864a648d0f.header.json`
- `examples/thoth-capture/blob-1347aae2-aa68-44ff-bb95-fd864a648d0f.semantic.json`
- `examples/thoth-capture/blob-1347aae2-aa68-44ff-bb95-fd864a648d0f.structural.json`
- `examples/thoth-capture/commit-members-1.json`
- `examples/thoth-capture/commit-members-2.json`
- `examples/thoth-capture/ids.json`
- `examples/thoth-capture/link-280e2137-89fe-4da4-aa7f-2e132c0e51b6.header.json`
- `examples/thoth-capture/link-280e2137-89fe-4da4-aa7f-2e132c0e51b6.semantic.json`
- `examples/thoth-capture/link-280e2137-89fe-4da4-aa7f-2e132c0e51b6.structural.json`
- `examples/thoth-capture/link-394dbb9d-d4d3-4796-b5fe-473c2004f761.header.json`
- `examples/thoth-capture/link-394dbb9d-d4d3-4796-b5fe-473c2004f761.semantic.json`
- `examples/thoth-capture/link-394dbb9d-d4d3-4796-b5fe-473c2004f761.structural.json`
- `examples/thoth-capture/link-39d32f3d-12e0-4c8a-8014-5325d3c835e3.header.json`
- `examples/thoth-capture/link-39d32f3d-12e0-4c8a-8014-5325d3c835e3.semantic.json`
- `examples/thoth-capture/link-39d32f3d-12e0-4c8a-8014-5325d3c835e3.structural.json`
- `examples/thoth-capture/link-3b8624df-05b0-4bb0-9a4a-092a183f50a9.header.json`
- `examples/thoth-capture/link-3b8624df-05b0-4bb0-9a4a-092a183f50a9.semantic.json`
- `examples/thoth-capture/link-3b8624df-05b0-4bb0-9a4a-092a183f50a9.structural.json`
- `examples/thoth-capture/link-a4357ced-f874-4ab8-97ad-6eb95171879d.header.json`
- `examples/thoth-capture/link-a4357ced-f874-4ab8-97ad-6eb95171879d.semantic.json`
- `examples/thoth-capture/link-a4357ced-f874-4ab8-97ad-6eb95171879d.structural.json`
- `examples/thoth-capture/link-b6f86d6f-d5ae-42e1-9b45-1e196b3bc15a.header.json`
- `examples/thoth-capture/link-b6f86d6f-d5ae-42e1-9b45-1e196b3bc15a.semantic.json`
- `examples/thoth-capture/link-b6f86d6f-d5ae-42e1-9b45-1e196b3bc15a.structural.json`
- `examples/thoth-capture/link-b8eca641-3df7-4f0f-90c4-5ad0b1c4bed2.header.json`
- `examples/thoth-capture/link-b8eca641-3df7-4f0f-90c4-5ad0b1c4bed2.semantic.json`
- `examples/thoth-capture/link-b8eca641-3df7-4f0f-90c4-5ad0b1c4bed2.structural.json`
- `examples/thoth-capture/producer-batch.json`
- `examples/thoth-capture/record-11ecb434-503d-475e-8d94-602398794896.header.json`
- `examples/thoth-capture/record-11ecb434-503d-475e-8d94-602398794896.semantic.json`
- `examples/thoth-capture/record-11ecb434-503d-475e-8d94-602398794896.structural.json`
- `examples/thoth-capture/record-15b2492f-59a8-4e6a-93a2-c3b4a134c345.header.json`
- `examples/thoth-capture/record-15b2492f-59a8-4e6a-93a2-c3b4a134c345.semantic.json`
- `examples/thoth-capture/record-15b2492f-59a8-4e6a-93a2-c3b4a134c345.structural.json`
- `examples/thoth-capture/record-1914abf8-35f2-489c-baaa-5505a9983281.header.json`
- `examples/thoth-capture/record-1914abf8-35f2-489c-baaa-5505a9983281.structural.json`
- `examples/thoth-capture/record-2fd2e84a-3d89-47b6-83c2-1be7729ff839.header.json`
- `examples/thoth-capture/record-2fd2e84a-3d89-47b6-83c2-1be7729ff839.semantic.json`
- `examples/thoth-capture/record-2fd2e84a-3d89-47b6-83c2-1be7729ff839.structural.json`
- `examples/thoth-capture/record-6acc6514-2dab-4ba0-9851-89d51a83e1c1.header.json`
- `examples/thoth-capture/record-6acc6514-2dab-4ba0-9851-89d51a83e1c1.semantic.json`
- `examples/thoth-capture/record-6acc6514-2dab-4ba0-9851-89d51a83e1c1.structural.json`
- `examples/thoth-capture/record-85441aca-60e4-4a94-bf4b-10e71046dbec.header.json`
- `examples/thoth-capture/record-85441aca-60e4-4a94-bf4b-10e71046dbec.semantic.json`
- `examples/thoth-capture/record-85441aca-60e4-4a94-bf4b-10e71046dbec.structural.json`
- `examples/thoth-capture/record-86fb5ba3-070c-4557-b5f5-24688206ad80.header.json`
- `examples/thoth-capture/record-86fb5ba3-070c-4557-b5f5-24688206ad80.semantic.json`
- `examples/thoth-capture/record-86fb5ba3-070c-4557-b5f5-24688206ad80.structural.json`
- `examples/thoth-capture/record-8a28d4f2-8e94-4ab1-a0b4-08d6c6f1cc81.header.json`
- `examples/thoth-capture/record-8a28d4f2-8e94-4ab1-a0b4-08d6c6f1cc81.semantic.json`
- `examples/thoth-capture/record-8a28d4f2-8e94-4ab1-a0b4-08d6c6f1cc81.structural.json`
- `examples/thoth-capture/record-a5e2e478-195c-4f2e-8329-a13a1e1fef7e.header.json`
- `examples/thoth-capture/record-a5e2e478-195c-4f2e-8329-a13a1e1fef7e.semantic.json`
- `examples/thoth-capture/record-a5e2e478-195c-4f2e-8329-a13a1e1fef7e.structural.json`
- `examples/thoth-capture/record-ad7690e6-b6d5-4933-9527-27d2c41b7187.header.json`
- `examples/thoth-capture/record-ad7690e6-b6d5-4933-9527-27d2c41b7187.structural.json`
- `examples/thoth-capture/record-b442886f-3495-40d5-b088-f46b5167cc28.header.json`
- `examples/thoth-capture/record-b442886f-3495-40d5-b088-f46b5167cc28.structural.json`
- `examples/thoth-capture/record-d0d98ab3-0493-4491-bde9-ccfb70e6c82d.header.json`
- `examples/thoth-capture/record-d0d98ab3-0493-4491-bde9-ccfb70e6c82d.semantic.json`
- `examples/thoth-capture/record-d0d98ab3-0493-4491-bde9-ccfb70e6c82d.structural.json`
- `examples/thoth-capture/record-ec80197e-7b6d-4164-a82a-317f7ef748e8.header.json`
- `examples/thoth-capture/record-ec80197e-7b6d-4164-a82a-317f7ef748e8.semantic.json`
- `examples/thoth-capture/record-ec80197e-7b6d-4164-a82a-317f7ef748e8.structural.json`
- `examples/thoth-capture/record-ef73705f-4910-4bfa-ab60-cf08d8169b6d.header.json`
- `examples/thoth-capture/record-ef73705f-4910-4bfa-ab60-cf08d8169b6d.semantic.json`
- `examples/thoth-capture/record-ef73705f-4910-4bfa-ab60-cf08d8169b6d.structural.json`
- `examples/thoth-capture/record-fa001749-4cb0-4117-a8b7-9dbc02a811cd.header.json`
- `examples/thoth-capture/record-fa001749-4cb0-4117-a8b7-9dbc02a811cd.structural.json`
- `examples/thoth-capture/segment-1842.wav`
- `openapi/README.md`
- `openapi/ccf-api.openapi.yaml`
- `registries/README.md`
- `registries/authority-bases.registry.json`
- `registries/blobs.registry.json`
- `registries/data-classes.registry.json`
- `registries/hash-profiles.registry.json`
- `registries/links.registry.json`
- `registries/policy-evaluators.registry.json`
- `registries/predicates.registry.json`
- `registries/profiles.registry.json`
- `registries/retention-profiles.registry.json`
- `registries/signature-profiles.registry.json`
- `registries/state-machines.registry.json`
- `registries/types.registry.json`
- `schemas/README.md`
- `schemas/catalog.json`
- `schemas/common/compartment-envelope.schema.json`
- `schemas/common/defs.schema.json`
- `schemas/governance/authorization-decision.schema.json`
- `schemas/governance/decision-context.schema.json`
- `schemas/objects/blob-header.schema.json`
- `schemas/objects/blob-semantic-content.schema.json`
- `schemas/objects/blob-semantic.schema.json`
- `schemas/objects/blob-structural-content.schema.json`
- `schemas/objects/blob-structural.schema.json`
- `schemas/objects/commit-member.schema.json`
- `schemas/objects/link-header.schema.json`
- `schemas/objects/link-semantic-content.schema.json`
- `schemas/objects/link-semantic.schema.json`
- `schemas/objects/link-structural-content.schema.json`
- `schemas/objects/link-structural.schema.json`
- `schemas/objects/mindpack-manifest.schema.json`
- `schemas/objects/record-header.schema.json`
- `schemas/objects/record-semantic-content.schema.json`
- `schemas/objects/record-semantic.schema.json`
- `schemas/objects/record-structural-content.schema.json`
- `schemas/objects/record-structural.schema.json`
- `schemas/objects/structural/core-device-credential.schema.json`
- `schemas/objects/structural/empty.schema.json`
- `schemas/objects/structural/integrity-catalog-transition.schema.json`
- `schemas/objects/structural/integrity-commit.schema.json`
- `schemas/objects/structural/integrity-head-witness.schema.json`
- `schemas/objects/structural/integrity-signer-rotation.schema.json`
- `schemas/objects/structural/integrity-successor-activation.schema.json`
- `schemas/objects/structural/integrity-successor-authorization-revocation.schema.json`
- `schemas/objects/structural/integrity-successor-authorization.schema.json`
- `schemas/objects/structural/lineage-erasure-receipt.schema.json`
- `schemas/objects/structural/lineage-link-disposition.schema.json`
- `schemas/operational/admission.schema.json`
- `schemas/operational/batch-result.schema.json`
- `schemas/operational/body-storage.schema.json`
- `schemas/operational/erasure-operation.schema.json`
- `schemas/operational/lineage-head.schema.json`
- `schemas/operational/policy-pending.schema.json`
- `schemas/operational/projection-checkpoint.schema.json`
- `schemas/payloads/agent/finding.schema.json`
- `schemas/payloads/agent/handoff.schema.json`
- `schemas/payloads/agent/proposal.schema.json`
- `schemas/payloads/agent/receipt.schema.json`
- `schemas/payloads/agent/run.schema.json`
- `schemas/payloads/continuity/boundary.schema.json`
- `schemas/payloads/continuity/commitment.schema.json`
- `schemas/payloads/continuity/episode.schema.json`
- `schemas/payloads/continuity/goal.schema.json`
- `schemas/payloads/continuity/preference.schema.json`
- `schemas/payloads/continuity/relationship.schema.json`
- `schemas/payloads/continuity/value.schema.json`
- `schemas/payloads/core/empty.schema.json`
- `schemas/payloads/core/person.schema.json`
- `schemas/payloads/core/runtime.schema.json`
- `schemas/payloads/core/session.schema.json`
- `schemas/payloads/core/source.schema.json`
- `schemas/payloads/experience/artifact.schema.json`
- `schemas/payloads/experience/event.schema.json`
- `schemas/payloads/experience/observation.schema.json`
- `schemas/payloads/experience/utterance.schema.json`
- `schemas/payloads/governance/consent.schema.json`
- `schemas/payloads/governance/erasure_decision.schema.json`
- `schemas/payloads/governance/erasure_request.schema.json`
- `schemas/payloads/governance/grant.schema.json`
- `schemas/payloads/governance/legal_basis.schema.json`
- `schemas/payloads/governance/legal_hold.schema.json`
- `schemas/payloads/governance/objection.schema.json`
- `schemas/payloads/governance/policy.schema.json`
- `schemas/payloads/governance/restriction.schema.json`
- `schemas/payloads/governance/retention_trigger.schema.json`
- `schemas/payloads/governance/review_decision.schema.json`
- `schemas/payloads/governance/subject_access_request.schema.json`
- `schemas/payloads/integrity/catalog_transition.schema.json`
- `schemas/payloads/integrity/commit.schema.json`
- `schemas/payloads/integrity/head_witness.schema.json`
- `schemas/payloads/integrity/signer_rotation.schema.json`
- `schemas/payloads/integrity/successor_activation.schema.json`
- `schemas/payloads/integrity/successor_authorization.schema.json`
- `schemas/payloads/integrity/successor_authorization_revocation.schema.json`
- `schemas/payloads/lineage/erasure_receipt.schema.json`
- `schemas/payloads/lineage/link_disposition.schema.json`
- `schemas/payloads/process/run.schema.json`
- `schemas/payloads/security/finding.schema.json`
- `schemas/payloads/security/keyset_manifest.schema.json`
- `schemas/payloads/semantic/assertion.schema.json`
- `schemas/payloads/semantic/concept.schema.json`
- `schemas/payloads/semantic/entity.schema.json`
- `schemas/payloads/semantic/entity_resolution.schema.json`
- `schemas/payloads/sync/producer_batch_receipt.schema.json`
- `schemas/payloads/work/constraint.schema.json`
- `schemas/payloads/work/decision.schema.json`
- `schemas/payloads/work/project.schema.json`
- `schemas/payloads/work/task.schema.json`
- `schemas/registries/blob-registry.schema.json`
- `schemas/registries/link-registry.schema.json`
- `schemas/registries/predicate-registry.schema.json`
- `schemas/registries/profile-registry.schema.json`
- `schemas/registries/state-machine-registry.schema.json`
- `schemas/registries/type-registry.schema.json`
- `schemas/security/device-credential.schema.json`
- `schemas/security/keyset-manifest.schema.json`
- `schemas/submissions/blob-submission.schema.json`
- `schemas/submissions/link-submission.schema.json`
- `schemas/submissions/record-submission.schema.json`
- `schemas/sync/delta-pack-manifest.schema.json`
- `schemas/sync/producer-batch.schema.json`
- `schemas/sync/sync-head.schema.json`
- `semantic-catalog.json`
- `sql/README.md`
- `sql/postgres-reference.sql`
- `tools/build-catalog.mjs`
- `tools/build-example.mjs`
- `tools/build-vectors.mjs`
- `tools/ccf-jcs.mjs`
- `tools/check-all.sh`
- `tools/validate-package.py`
- `tools/verify-example-mindpack.mjs`
- `tools/verify-vectors.mjs`
- `vectors/README.md`
- `vectors/TEST-ONLY-archive-ed25519-private.pem`
- `vectors/TEST-ONLY-device-ed25519-private.pem`
- `vectors/archive-ed25519-public.pem`
- `vectors/canonicalization.json`
- `vectors/commit-signing.json`
- `vectors/device-ed25519-public.pem`
- `vectors/merkle.json`
- `vectors/object-hashes.json`
- `vectors/ordering.json`
- `vectors/producer-batch.json`
- `vectors/submission-hashes.json`
