spec/ccf/0.1.2/PACKAGE-INVENTORY.md
# CCF 0.1.2 package inventory

Generated deterministically from the validated reference package.

- Files before checksum manifest and inventory: **473**
- JSON Schemas: **112**
- Registry files: **14**
- Markdown documents: **35**

## Top-level counts

- `CCF-0.1.2-SPEC.md`: 1
- `CHANGELOG-0.1.2.md`: 1
- `docs`: 23
- `examples`: 279
- `Makefile`: 1
- `openapi`: 2
- `README.md`: 1
- `registries`: 15
- `requirements-checks.txt`: 1
- `schemas`: 114
- `semantic-catalog.json`: 1
- `sql`: 2
- `tools`: 15
- `vectors`: 17

## Files

- `CCF-0.1.2-SPEC.md`
- `CHANGELOG-0.1.2.md`
- `Makefile`
- `README.md`
- `docs/00-status-conformance.md`
- `docs/01-object-model.md`
- `docs/02-identifiers-references.md`
- `docs/03-bodies-erasure.md`
- `docs/04-canonicalization-hashing.md`
- `docs/05-envelopes.md`
- `docs/06-admission-idempotency.md`
- `docs/07-integrity-chain.md`
- `docs/08-lineages-state-machines.md`
- `docs/09-governance.md`
- `docs/10-projections-postgres.md`
- `docs/11-import-export-evolution.md`
- `docs/12-security-trust.md`
- `docs/13-conformance.md`
- `docs/14-integration-guide.md`
- `docs/15-glossary.md`
- `docs/16-changelog.md`
- `docs/profiles/archive-encryption.md`
- `docs/profiles/core.md`
- `docs/profiles/local-sync.md`
- `docs/profiles/object-erasure.md`
- `docs/profiles/succession.md`
- `docs/profiles/witnessed-integrity.md`
- `examples/mindpack/README.md`
- `examples/mindpack/archive.json`
- `examples/mindpack/blob-data/4393e9d0-c150-448d-9b27-05872973abab.bin`
- `examples/mindpack/blob-data/ce293b52-58f1-4f52-87d1-4b7d5e75edb8.bin`
- `examples/mindpack/compartments/blobs/4393e9d0-c150-448d-9b27-05872973abab.semantic.json`
- `examples/mindpack/compartments/blobs/4393e9d0-c150-448d-9b27-05872973abab.structural.json`
- `examples/mindpack/compartments/blobs/ce293b52-58f1-4f52-87d1-4b7d5e75edb8.semantic.json`
- `examples/mindpack/compartments/blobs/ce293b52-58f1-4f52-87d1-4b7d5e75edb8.structural.json`
- `examples/mindpack/compartments/links/098c30cb-13fa-42b1-96f4-923ce82dd9d3.semantic.json`
- `examples/mindpack/compartments/links/098c30cb-13fa-42b1-96f4-923ce82dd9d3.structural.json`
- `examples/mindpack/compartments/links/1ae193bd-79bd-4535-bbd3-a670dba025ff.semantic.json`
- `examples/mindpack/compartments/links/1ae193bd-79bd-4535-bbd3-a670dba025ff.structural.json`
- `examples/mindpack/compartments/links/76a63205-f0d1-4502-b29e-c44e0d1c6645.semantic.json`
- `examples/mindpack/compartments/links/76a63205-f0d1-4502-b29e-c44e0d1c6645.structural.json`
- `examples/mindpack/compartments/links/a3a6c051-271d-47cf-bee5-35fc66d903c2.semantic.json`
- `examples/mindpack/compartments/links/a3a6c051-271d-47cf-bee5-35fc66d903c2.structural.json`
- `examples/mindpack/compartments/links/a3eedfcb-016b-4f1b-a58a-3afe9b9d1e62.semantic.json`
- `examples/mindpack/compartments/links/a3eedfcb-016b-4f1b-a58a-3afe9b9d1e62.structural.json`
- `examples/mindpack/compartments/links/c78ac8a7-56fa-4c79-b74b-640d3cc82a09.semantic.json`
- `examples/mindpack/compartments/links/c78ac8a7-56fa-4c79-b74b-640d3cc82a09.structural.json`
- `examples/mindpack/compartments/links/d8302220-fcda-466a-ae4f-58b116746b4e.semantic.json`
- `examples/mindpack/compartments/links/d8302220-fcda-466a-ae4f-58b116746b4e.structural.json`
- `examples/mindpack/compartments/links/e807d6c8-6589-4ac2-bed4-032207901261.semantic.json`
- `examples/mindpack/compartments/links/e807d6c8-6589-4ac2-bed4-032207901261.structural.json`
- `examples/mindpack/compartments/records/03e09d92-b68b-467d-b3c9-18a15be891be.semantic.json`
- `examples/mindpack/compartments/records/03e09d92-b68b-467d-b3c9-18a15be891be.structural.json`
- `examples/mindpack/compartments/records/11d6493a-061f-46fa-85a6-d32f44cdcd5e.structural.json`
- `examples/mindpack/compartments/records/2afb37bd-f796-40d5-bfdd-49375344f059.structural.json`
- `examples/mindpack/compartments/records/2e96f116-6c1a-4216-8ac5-63d0b5da108f.semantic.json`
- `examples/mindpack/compartments/records/2e96f116-6c1a-4216-8ac5-63d0b5da108f.structural.json`
- `examples/mindpack/compartments/records/396faaaf-52c3-494d-b456-bbb1b8889cbf.structural.json`
- `examples/mindpack/compartments/records/4034e10b-7a56-46b6-9162-d1cf909f8a78.semantic.json`
- `examples/mindpack/compartments/records/4034e10b-7a56-46b6-9162-d1cf909f8a78.structural.json`
- `examples/mindpack/compartments/records/405c475b-1c4c-4e05-b978-28246bb3a5fa.structural.json`
- `examples/mindpack/compartments/records/4bc9c0eb-a3b3-4d1f-8b61-d58225d3a203.semantic.json`
- `examples/mindpack/compartments/records/4bc9c0eb-a3b3-4d1f-8b61-d58225d3a203.structural.json`
- `examples/mindpack/compartments/records/4d8feff5-3956-4190-9679-203f34a09de1.semantic.json`
- `examples/mindpack/compartments/records/4d8feff5-3956-4190-9679-203f34a09de1.structural.json`
- `examples/mindpack/compartments/records/4e9f8cc9-563a-4d61-8221-9f55e9db39bd.semantic.json`
- `examples/mindpack/compartments/records/4e9f8cc9-563a-4d61-8221-9f55e9db39bd.structural.json`
- `examples/mindpack/compartments/records/63607ea0-9d26-4625-ab23-65ce7415b571.semantic.json`
- `examples/mindpack/compartments/records/63607ea0-9d26-4625-ab23-65ce7415b571.structural.json`
- `examples/mindpack/compartments/records/649042b4-1519-4dfb-8de9-9dffb167de34.structural.json`
- `examples/mindpack/compartments/records/682d6151-5dd6-42d8-874c-895c3a501f09.semantic.json`
- `examples/mindpack/compartments/records/682d6151-5dd6-42d8-874c-895c3a501f09.structural.json`
- `examples/mindpack/compartments/records/908e42a4-f136-458f-8cf9-7597922fab21.semantic.json`
- `examples/mindpack/compartments/records/908e42a4-f136-458f-8cf9-7597922fab21.structural.json`
- `examples/mindpack/compartments/records/a01f8c5c-8278-4a2b-bccb-c270ca803586.semantic.json`
- `examples/mindpack/compartments/records/a01f8c5c-8278-4a2b-bccb-c270ca803586.structural.json`
- `examples/mindpack/compartments/records/b7972dfb-99c3-4376-897f-3c9f2848138b.semantic.json`
- `examples/mindpack/compartments/records/b7972dfb-99c3-4376-897f-3c9f2848138b.structural.json`
- `examples/mindpack/compartments/records/c59fe210-08b0-4ae7-9896-024d9ebbe47b.structural.json`
- `examples/mindpack/compartments/records/ce293b52-58f1-4f52-87d1-4b7d5e75edb8.semantic.json`
- `examples/mindpack/compartments/records/ce293b52-58f1-4f52-87d1-4b7d5e75edb8.structural.json`
- `examples/mindpack/integrity/commits.ndjson`
- `examples/mindpack/integrity/members.ndjson`
- `examples/mindpack/lineage-heads.ndjson`
- `examples/mindpack/manifest.json`
- `examples/mindpack/objects/blobs.ndjson`
- `examples/mindpack/objects/links.ndjson`
- `examples/mindpack/objects/records.ndjson`
- `examples/mindpack/origin-index.ndjson`
- `examples/mindpack/producer-batches/98d352bf-7abb-4fdf-824c-3c93c4e55901.json`
- `examples/mindpack/producer-heads.ndjson`
- `examples/mindpack/registries/README.md`
- `examples/mindpack/registries/admission-authority-classes.registry.json`
- `examples/mindpack/registries/authority-bases.registry.json`
- `examples/mindpack/registries/blobs.registry.json`
- `examples/mindpack/registries/data-classes.registry.json`
- `examples/mindpack/registries/hash-profiles.registry.json`
- `examples/mindpack/registries/links.registry.json`
- `examples/mindpack/registries/policy-evaluators.registry.json`
- `examples/mindpack/registries/predicates.registry.json`
- `examples/mindpack/registries/profiles.registry.json`
- `examples/mindpack/registries/retention-profiles.registry.json`
- `examples/mindpack/registries/signature-profiles.registry.json`
- `examples/mindpack/registries/state-machines.registry.json`
- `examples/mindpack/registries/suppression-profiles.registry.json`
- `examples/mindpack/registries/types.registry.json`
- `examples/mindpack/schemas/README.md`
- `examples/mindpack/schemas/catalog.json`
- `examples/mindpack/schemas/common/compartment-envelope.schema.json`
- `examples/mindpack/schemas/common/defs.schema.json`
- `examples/mindpack/schemas/governance/authorization-decision.schema.json`
- `examples/mindpack/schemas/governance/decision-context.schema.json`
- `examples/mindpack/schemas/objects/blob-header.schema.json`
- `examples/mindpack/schemas/objects/blob-semantic-content.schema.json`
- `examples/mindpack/schemas/objects/blob-semantic.schema.json`
- `examples/mindpack/schemas/objects/blob-structural-content.schema.json`
- `examples/mindpack/schemas/objects/blob-structural.schema.json`
- `examples/mindpack/schemas/objects/commit-member.schema.json`
- `examples/mindpack/schemas/objects/link-header.schema.json`
- `examples/mindpack/schemas/objects/link-semantic-content.schema.json`
- `examples/mindpack/schemas/objects/link-semantic.schema.json`
- `examples/mindpack/schemas/objects/link-structural-content.schema.json`
- `examples/mindpack/schemas/objects/link-structural.schema.json`
- `examples/mindpack/schemas/objects/mindpack-manifest.schema.json`
- `examples/mindpack/schemas/objects/record-header.schema.json`
- `examples/mindpack/schemas/objects/record-semantic-content.schema.json`
- `examples/mindpack/schemas/objects/record-semantic.schema.json`
- `examples/mindpack/schemas/objects/record-structural-content.schema.json`
- `examples/mindpack/schemas/objects/record-structural.schema.json`
- `examples/mindpack/schemas/objects/structural/core-device-credential.schema.json`
- `examples/mindpack/schemas/objects/structural/empty.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-catalog-transition.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-commit.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-head-witness.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-signer-rotation.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-successor-activation.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-successor-authorization-revocation.schema.json`
- `examples/mindpack/schemas/objects/structural/integrity-successor-authorization.schema.json`
- `examples/mindpack/schemas/objects/structural/lineage-erasure-receipt.schema.json`
- `examples/mindpack/schemas/objects/structural/lineage-link-disposition.schema.json`
- `examples/mindpack/schemas/objects/structural/lineage-suppression-set.schema.json`
- `examples/mindpack/schemas/operational/admission.schema.json`
- `examples/mindpack/schemas/operational/batch-result.schema.json`
- `examples/mindpack/schemas/operational/body-storage.schema.json`
- `examples/mindpack/schemas/operational/erasure-operation.schema.json`
- `examples/mindpack/schemas/operational/lineage-head.schema.json`
- `examples/mindpack/schemas/operational/policy-pending.schema.json`
- `examples/mindpack/schemas/operational/projection-checkpoint.schema.json`
- `examples/mindpack/schemas/payloads/agent/finding.schema.json`
- `examples/mindpack/schemas/payloads/agent/handoff.schema.json`
- `examples/mindpack/schemas/payloads/agent/proposal.schema.json`
- `examples/mindpack/schemas/payloads/agent/receipt.schema.json`
- `examples/mindpack/schemas/payloads/agent/run.schema.json`
- `examples/mindpack/schemas/payloads/continuity/boundary.schema.json`
- `examples/mindpack/schemas/payloads/continuity/commitment.schema.json`
- `examples/mindpack/schemas/payloads/continuity/episode.schema.json`
- `examples/mindpack/schemas/payloads/continuity/goal.schema.json`
- `examples/mindpack/schemas/payloads/continuity/preference.schema.json`
- `examples/mindpack/schemas/payloads/continuity/relationship.schema.json`
- `examples/mindpack/schemas/payloads/continuity/value.schema.json`
- `examples/mindpack/schemas/payloads/core/empty.schema.json`
- `examples/mindpack/schemas/payloads/core/person.schema.json`
- `examples/mindpack/schemas/payloads/core/runtime.schema.json`
- `examples/mindpack/schemas/payloads/core/session.schema.json`
- `examples/mindpack/schemas/payloads/core/source.schema.json`
- `examples/mindpack/schemas/payloads/experience/artifact.schema.json`
- `examples/mindpack/schemas/payloads/experience/event.schema.json`
- `examples/mindpack/schemas/payloads/experience/observation.schema.json`
- `examples/mindpack/schemas/payloads/experience/utterance.schema.json`
- `examples/mindpack/schemas/payloads/governance/consent.schema.json`
- `examples/mindpack/schemas/payloads/governance/erasure_decision.schema.json`
- `examples/mindpack/schemas/payloads/governance/erasure_request.schema.json`
- `examples/mindpack/schemas/payloads/governance/grant.schema.json`
- `examples/mindpack/schemas/payloads/governance/legal_basis.schema.json`
- `examples/mindpack/schemas/payloads/governance/legal_hold.schema.json`
- `examples/mindpack/schemas/payloads/governance/objection.schema.json`
- `examples/mindpack/schemas/payloads/governance/policy.schema.json`
- `examples/mindpack/schemas/payloads/governance/restriction.schema.json`
- `examples/mindpack/schemas/payloads/governance/retention_trigger.schema.json`
- `examples/mindpack/schemas/payloads/governance/review_decision.schema.json`
- `examples/mindpack/schemas/payloads/governance/subject_access_request.schema.json`
- `examples/mindpack/schemas/payloads/integrity/catalog_transition.schema.json`
- `examples/mindpack/schemas/payloads/integrity/commit.schema.json`
- `examples/mindpack/schemas/payloads/integrity/head_witness.schema.json`
- `examples/mindpack/schemas/payloads/integrity/signer_rotation.schema.json`
- `examples/mindpack/schemas/payloads/integrity/successor_activation.schema.json`
- `examples/mindpack/schemas/payloads/integrity/successor_authorization.schema.json`
- `examples/mindpack/schemas/payloads/integrity/successor_authorization_revocation.schema.json`
- `examples/mindpack/schemas/payloads/lineage/erasure_receipt.schema.json`
- `examples/mindpack/schemas/payloads/lineage/link_disposition.schema.json`
- `examples/mindpack/schemas/payloads/lineage/suppression_set.schema.json`
- `examples/mindpack/schemas/payloads/process/run.schema.json`
- `examples/mindpack/schemas/payloads/security/finding.schema.json`
- `examples/mindpack/schemas/payloads/security/keyset_manifest.schema.json`
- `examples/mindpack/schemas/payloads/semantic/assertion.schema.json`
- `examples/mindpack/schemas/payloads/semantic/concept.schema.json`
- `examples/mindpack/schemas/payloads/semantic/entity.schema.json`
- `examples/mindpack/schemas/payloads/semantic/entity_resolution.schema.json`
- `examples/mindpack/schemas/payloads/sync/producer_batch_receipt.schema.json`
- `examples/mindpack/schemas/payloads/work/constraint.schema.json`
- `examples/mindpack/schemas/payloads/work/decision.schema.json`
- `examples/mindpack/schemas/payloads/work/project.schema.json`
- `examples/mindpack/schemas/payloads/work/task.schema.json`
- `examples/mindpack/schemas/registries/admission-authority-class-registry.schema.json`
- `examples/mindpack/schemas/registries/blob-registry.schema.json`
- `examples/mindpack/schemas/registries/link-registry.schema.json`
- `examples/mindpack/schemas/registries/predicate-registry.schema.json`
- `examples/mindpack/schemas/registries/profile-registry.schema.json`
- `examples/mindpack/schemas/registries/state-machine-registry.schema.json`
- `examples/mindpack/schemas/registries/suppression-profile-registry.schema.json`
- `examples/mindpack/schemas/registries/type-registry.schema.json`
- `examples/mindpack/schemas/security/device-credential.schema.json`
- `examples/mindpack/schemas/security/keyset-manifest.schema.json`
- `examples/mindpack/schemas/security/suppression-preimage.schema.json`
- `examples/mindpack/schemas/submissions/blob-submission.schema.json`
- `examples/mindpack/schemas/submissions/link-submission.schema.json`
- `examples/mindpack/schemas/submissions/record-submission.schema.json`
- `examples/mindpack/schemas/sync/delta-pack-manifest.schema.json`
- `examples/mindpack/schemas/sync/producer-batch.schema.json`
- `examples/mindpack/schemas/sync/sync-head.schema.json`
- `examples/mindpack/semantic-catalog.json`
- `examples/personal-archive/README.md`
- `examples/personal-archive/blob-4393e9d0-c150-448d-9b27-05872973abab.header.json`
- `examples/personal-archive/blob-4393e9d0-c150-448d-9b27-05872973abab.semantic.json`
- `examples/personal-archive/blob-4393e9d0-c150-448d-9b27-05872973abab.structural.json`
- `examples/personal-archive/blob-ce293b52-58f1-4f52-87d1-4b7d5e75edb8.header.json`
- `examples/personal-archive/blob-ce293b52-58f1-4f52-87d1-4b7d5e75edb8.semantic.json`
- `examples/personal-archive/blob-ce293b52-58f1-4f52-87d1-4b7d5e75edb8.structural.json`
- `examples/personal-archive/commit-members-1.json`
- `examples/personal-archive/commit-members-2.json`
- `examples/personal-archive/ids.json`
- `examples/personal-archive/link-098c30cb-13fa-42b1-96f4-923ce82dd9d3.header.json`
- `examples/personal-archive/link-098c30cb-13fa-42b1-96f4-923ce82dd9d3.semantic.json`
- `examples/personal-archive/link-098c30cb-13fa-42b1-96f4-923ce82dd9d3.structural.json`
- `examples/personal-archive/link-1ae193bd-79bd-4535-bbd3-a670dba025ff.header.json`
- `examples/personal-archive/link-1ae193bd-79bd-4535-bbd3-a670dba025ff.semantic.json`
- `examples/personal-archive/link-1ae193bd-79bd-4535-bbd3-a670dba025ff.structural.json`
- `examples/personal-archive/link-76a63205-f0d1-4502-b29e-c44e0d1c6645.header.json`
- `examples/personal-archive/link-76a63205-f0d1-4502-b29e-c44e0d1c6645.semantic.json`
- `examples/personal-archive/link-76a63205-f0d1-4502-b29e-c44e0d1c6645.structural.json`
- `examples/personal-archive/link-a3a6c051-271d-47cf-bee5-35fc66d903c2.header.json`
- `examples/personal-archive/link-a3a6c051-271d-47cf-bee5-35fc66d903c2.semantic.json`
- `examples/personal-archive/link-a3a6c051-271d-47cf-bee5-35fc66d903c2.structural.json`
- `examples/personal-archive/link-a3eedfcb-016b-4f1b-a58a-3afe9b9d1e62.header.json`
- `examples/personal-archive/link-a3eedfcb-016b-4f1b-a58a-3afe9b9d1e62.semantic.json`
- `examples/personal-archive/link-a3eedfcb-016b-4f1b-a58a-3afe9b9d1e62.structural.json`
- `examples/personal-archive/link-c78ac8a7-56fa-4c79-b74b-640d3cc82a09.header.json`
- `examples/personal-archive/link-c78ac8a7-56fa-4c79-b74b-640d3cc82a09.semantic.json`
- `examples/personal-archive/link-c78ac8a7-56fa-4c79-b74b-640d3cc82a09.structural.json`
- `examples/personal-archive/link-d8302220-fcda-466a-ae4f-58b116746b4e.header.json`
- `examples/personal-archive/link-d8302220-fcda-466a-ae4f-58b116746b4e.semantic.json`
- `examples/personal-archive/link-d8302220-fcda-466a-ae4f-58b116746b4e.structural.json`
- `examples/personal-archive/link-e807d6c8-6589-4ac2-bed4-032207901261.header.json`
- `examples/personal-archive/link-e807d6c8-6589-4ac2-bed4-032207901261.semantic.json`
- `examples/personal-archive/link-e807d6c8-6589-4ac2-bed4-032207901261.structural.json`
- `examples/personal-archive/producer-batch.json`
- `examples/personal-archive/record-03e09d92-b68b-467d-b3c9-18a15be891be.header.json`
- `examples/personal-archive/record-03e09d92-b68b-467d-b3c9-18a15be891be.semantic.json`
- `examples/personal-archive/record-03e09d92-b68b-467d-b3c9-18a15be891be.structural.json`
- `examples/personal-archive/record-11d6493a-061f-46fa-85a6-d32f44cdcd5e.header.json`
- `examples/personal-archive/record-11d6493a-061f-46fa-85a6-d32f44cdcd5e.structural.json`
- `examples/personal-archive/record-2afb37bd-f796-40d5-bfdd-49375344f059.header.json`
- `examples/personal-archive/record-2afb37bd-f796-40d5-bfdd-49375344f059.structural.json`
- `examples/personal-archive/record-2e96f116-6c1a-4216-8ac5-63d0b5da108f.header.json`
- `examples/personal-archive/record-2e96f116-6c1a-4216-8ac5-63d0b5da108f.semantic.json`
- `examples/personal-archive/record-2e96f116-6c1a-4216-8ac5-63d0b5da108f.structural.json`
- `examples/personal-archive/record-396faaaf-52c3-494d-b456-bbb1b8889cbf.header.json`
- `examples/personal-archive/record-396faaaf-52c3-494d-b456-bbb1b8889cbf.semantic.json`
- `examples/personal-archive/record-396faaaf-52c3-494d-b456-bbb1b8889cbf.structural.json`
- `examples/personal-archive/record-4034e10b-7a56-46b6-9162-d1cf909f8a78.header.json`
- `examples/personal-archive/record-4034e10b-7a56-46b6-9162-d1cf909f8a78.semantic.json`
- `examples/personal-archive/record-4034e10b-7a56-46b6-9162-d1cf909f8a78.structural.json`
- `examples/personal-archive/record-405c475b-1c4c-4e05-b978-28246bb3a5fa.header.json`
- `examples/personal-archive/record-405c475b-1c4c-4e05-b978-28246bb3a5fa.structural.json`
- `examples/personal-archive/record-4bc9c0eb-a3b3-4d1f-8b61-d58225d3a203.header.json`
- `examples/personal-archive/record-4bc9c0eb-a3b3-4d1f-8b61-d58225d3a203.semantic.json`
- `examples/personal-archive/record-4bc9c0eb-a3b3-4d1f-8b61-d58225d3a203.structural.json`
- `examples/personal-archive/record-4d8feff5-3956-4190-9679-203f34a09de1.header.json`
- `examples/personal-archive/record-4d8feff5-3956-4190-9679-203f34a09de1.semantic.json`
- `examples/personal-archive/record-4d8feff5-3956-4190-9679-203f34a09de1.structural.json`
- `examples/personal-archive/record-4e9f8cc9-563a-4d61-8221-9f55e9db39bd.header.json`
- `examples/personal-archive/record-4e9f8cc9-563a-4d61-8221-9f55e9db39bd.semantic.json`
- `examples/personal-archive/record-4e9f8cc9-563a-4d61-8221-9f55e9db39bd.structural.json`
- `examples/personal-archive/record-63607ea0-9d26-4625-ab23-65ce7415b571.header.json`
- `examples/personal-archive/record-63607ea0-9d26-4625-ab23-65ce7415b571.semantic.json`
- `examples/personal-archive/record-63607ea0-9d26-4625-ab23-65ce7415b571.structural.json`
- `examples/personal-archive/record-649042b4-1519-4dfb-8de9-9dffb167de34.header.json`
- `examples/personal-archive/record-649042b4-1519-4dfb-8de9-9dffb167de34.structural.json`
- `examples/personal-archive/record-682d6151-5dd6-42d8-874c-895c3a501f09.header.json`
- `examples/personal-archive/record-682d6151-5dd6-42d8-874c-895c3a501f09.semantic.json`
- `examples/personal-archive/record-682d6151-5dd6-42d8-874c-895c3a501f09.structural.json`
- `examples/personal-archive/record-908e42a4-f136-458f-8cf9-7597922fab21.header.json`
- `examples/personal-archive/record-908e42a4-f136-458f-8cf9-7597922fab21.semantic.json`
- `examples/personal-archive/record-908e42a4-f136-458f-8cf9-7597922fab21.structural.json`
- `examples/personal-archive/record-a01f8c5c-8278-4a2b-bccb-c270ca803586.header.json`
- `examples/personal-archive/record-a01f8c5c-8278-4a2b-bccb-c270ca803586.semantic.json`
- `examples/personal-archive/record-a01f8c5c-8278-4a2b-bccb-c270ca803586.structural.json`
- `examples/personal-archive/record-b7972dfb-99c3-4376-897f-3c9f2848138b.header.json`
- `examples/personal-archive/record-b7972dfb-99c3-4376-897f-3c9f2848138b.semantic.json`
- `examples/personal-archive/record-b7972dfb-99c3-4376-897f-3c9f2848138b.structural.json`
- `examples/personal-archive/record-c59fe210-08b0-4ae7-9896-024d9ebbe47b.header.json`
- `examples/personal-archive/record-c59fe210-08b0-4ae7-9896-024d9ebbe47b.structural.json`
- `examples/personal-archive/record-ce293b52-58f1-4f52-87d1-4b7d5e75edb8.header.json`
- `examples/personal-archive/record-ce293b52-58f1-4f52-87d1-4b7d5e75edb8.semantic.json`
- `examples/personal-archive/record-ce293b52-58f1-4f52-87d1-4b7d5e75edb8.structural.json`
- `examples/personal-archive/segment-1842.wav`
- `openapi/README.md`
- `openapi/ccf-api.openapi.yaml`
- `registries/README.md`
- `registries/admission-authority-classes.registry.json`
- `registries/authority-bases.registry.json`
- `registries/blobs.registry.json`
- `registries/data-classes.registry.json`
- `registries/hash-profiles.registry.json`
- `registries/links.registry.json`
- `registries/policy-evaluators.registry.json`
- `registries/predicates.registry.json`
- `registries/profiles.registry.json`
- `registries/retention-profiles.registry.json`
- `registries/signature-profiles.registry.json`
- `registries/state-machines.registry.json`
- `registries/suppression-profiles.registry.json`
- `registries/types.registry.json`
- `requirements-checks.txt`
- `schemas/README.md`
- `schemas/catalog.json`
- `schemas/common/compartment-envelope.schema.json`
- `schemas/common/defs.schema.json`
- `schemas/governance/authorization-decision.schema.json`
- `schemas/governance/decision-context.schema.json`
- `schemas/objects/blob-header.schema.json`
- `schemas/objects/blob-semantic-content.schema.json`
- `schemas/objects/blob-semantic.schema.json`
- `schemas/objects/blob-structural-content.schema.json`
- `schemas/objects/blob-structural.schema.json`
- `schemas/objects/commit-member.schema.json`
- `schemas/objects/link-header.schema.json`
- `schemas/objects/link-semantic-content.schema.json`
- `schemas/objects/link-semantic.schema.json`
- `schemas/objects/link-structural-content.schema.json`
- `schemas/objects/link-structural.schema.json`
- `schemas/objects/mindpack-manifest.schema.json`
- `schemas/objects/record-header.schema.json`
- `schemas/objects/record-semantic-content.schema.json`
- `schemas/objects/record-semantic.schema.json`
- `schemas/objects/record-structural-content.schema.json`
- `schemas/objects/record-structural.schema.json`
- `schemas/objects/structural/core-device-credential.schema.json`
- `schemas/objects/structural/empty.schema.json`
- `schemas/objects/structural/integrity-catalog-transition.schema.json`
- `schemas/objects/structural/integrity-commit.schema.json`
- `schemas/objects/structural/integrity-head-witness.schema.json`
- `schemas/objects/structural/integrity-signer-rotation.schema.json`
- `schemas/objects/structural/integrity-successor-activation.schema.json`
- `schemas/objects/structural/integrity-successor-authorization-revocation.schema.json`
- `schemas/objects/structural/integrity-successor-authorization.schema.json`
- `schemas/objects/structural/lineage-erasure-receipt.schema.json`
- `schemas/objects/structural/lineage-link-disposition.schema.json`
- `schemas/objects/structural/lineage-suppression-set.schema.json`
- `schemas/operational/admission.schema.json`
- `schemas/operational/batch-result.schema.json`
- `schemas/operational/body-storage.schema.json`
- `schemas/operational/erasure-operation.schema.json`
- `schemas/operational/lineage-head.schema.json`
- `schemas/operational/policy-pending.schema.json`
- `schemas/operational/projection-checkpoint.schema.json`
- `schemas/payloads/agent/finding.schema.json`
- `schemas/payloads/agent/handoff.schema.json`
- `schemas/payloads/agent/proposal.schema.json`
- `schemas/payloads/agent/receipt.schema.json`
- `schemas/payloads/agent/run.schema.json`
- `schemas/payloads/continuity/boundary.schema.json`
- `schemas/payloads/continuity/commitment.schema.json`
- `schemas/payloads/continuity/episode.schema.json`
- `schemas/payloads/continuity/goal.schema.json`
- `schemas/payloads/continuity/preference.schema.json`
- `schemas/payloads/continuity/relationship.schema.json`
- `schemas/payloads/continuity/value.schema.json`
- `schemas/payloads/core/empty.schema.json`
- `schemas/payloads/core/person.schema.json`
- `schemas/payloads/core/runtime.schema.json`
- `schemas/payloads/core/session.schema.json`
- `schemas/payloads/core/source.schema.json`
- `schemas/payloads/experience/artifact.schema.json`
- `schemas/payloads/experience/event.schema.json`
- `schemas/payloads/experience/observation.schema.json`
- `schemas/payloads/experience/utterance.schema.json`
- `schemas/payloads/governance/consent.schema.json`
- `schemas/payloads/governance/erasure_decision.schema.json`
- `schemas/payloads/governance/erasure_request.schema.json`
- `schemas/payloads/governance/grant.schema.json`
- `schemas/payloads/governance/legal_basis.schema.json`
- `schemas/payloads/governance/legal_hold.schema.json`
- `schemas/payloads/governance/objection.schema.json`
- `schemas/payloads/governance/policy.schema.json`
- `schemas/payloads/governance/restriction.schema.json`
- `schemas/payloads/governance/retention_trigger.schema.json`
- `schemas/payloads/governance/review_decision.schema.json`
- `schemas/payloads/governance/subject_access_request.schema.json`
- `schemas/payloads/integrity/catalog_transition.schema.json`
- `schemas/payloads/integrity/commit.schema.json`
- `schemas/payloads/integrity/head_witness.schema.json`
- `schemas/payloads/integrity/signer_rotation.schema.json`
- `schemas/payloads/integrity/successor_activation.schema.json`
- `schemas/payloads/integrity/successor_authorization.schema.json`
- `schemas/payloads/integrity/successor_authorization_revocation.schema.json`
- `schemas/payloads/lineage/erasure_receipt.schema.json`
- `schemas/payloads/lineage/link_disposition.schema.json`
- `schemas/payloads/lineage/suppression_set.schema.json`
- `schemas/payloads/process/run.schema.json`
- `schemas/payloads/security/finding.schema.json`
- `schemas/payloads/security/keyset_manifest.schema.json`
- `schemas/payloads/semantic/assertion.schema.json`
- `schemas/payloads/semantic/concept.schema.json`
- `schemas/payloads/semantic/entity.schema.json`
- `schemas/payloads/semantic/entity_resolution.schema.json`
- `schemas/payloads/sync/producer_batch_receipt.schema.json`
- `schemas/payloads/work/constraint.schema.json`
- `schemas/payloads/work/decision.schema.json`
- `schemas/payloads/work/project.schema.json`
- `schemas/payloads/work/task.schema.json`
- `schemas/registries/admission-authority-class-registry.schema.json`
- `schemas/registries/blob-registry.schema.json`
- `schemas/registries/link-registry.schema.json`
- `schemas/registries/predicate-registry.schema.json`
- `schemas/registries/profile-registry.schema.json`
- `schemas/registries/state-machine-registry.schema.json`
- `schemas/registries/suppression-profile-registry.schema.json`
- `schemas/registries/type-registry.schema.json`
- `schemas/security/device-credential.schema.json`
- `schemas/security/keyset-manifest.schema.json`
- `schemas/security/suppression-preimage.schema.json`
- `schemas/submissions/blob-submission.schema.json`
- `schemas/submissions/link-submission.schema.json`
- `schemas/submissions/record-submission.schema.json`
- `schemas/sync/delta-pack-manifest.schema.json`
- `schemas/sync/producer-batch.schema.json`
- `schemas/sync/sync-head.schema.json`
- `semantic-catalog.json`
- `sql/README.md`
- `sql/postgres-reference.sql`
- `tools/build-catalog.mjs`
- `tools/build-example.mjs`
- `tools/build-package-metadata.mjs`
- `tools/build-release-zip.py`
- `tools/build-vectors.mjs`
- `tools/ccf-jcs.mjs`
- `tools/check-all.sh`
- `tools/mindpack-manifest.mjs`
- `tools/validate-package.py`
- `tools/verify-conformance.mjs`
- `tools/verify-example-mindpack.mjs`
- `tools/verify-postgres-fixture.sh`
- `tools/verify-reproducible.sh`
- `tools/verify-suppression-fixture.mjs`
- `tools/verify-vectors.mjs`
- `vectors/README.md`
- `vectors/TEST-ONLY-archive-ed25519-private.pem`
- `vectors/TEST-ONLY-device-ed25519-private.pem`
- `vectors/admission-authority-classes.json`
- `vectors/archive-ed25519-public.pem`
- `vectors/canonicalization.json`
- `vectors/commit-signing.json`
- `vectors/conformance-0.1.2.json`
- `vectors/device-ed25519-public.pem`
- `vectors/foreign-unavailability.json`
- `vectors/merkle.json`
- `vectors/mindpack-manifest-tamper.json`
- `vectors/object-hashes.json`
- `vectors/ordering.json`
- `vectors/producer-batch.json`
- `vectors/submission-hashes.json`
- `vectors/suppression-canonical.json`
